--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     "mongoose": "https://esm.sh/mongoose@^9.1.2",
     "express": "https://esm.sh/express@^5.2.1",
     "dotenv": "https://esm.sh/dotenv@^17.2.3",
-    "cors": "https://esm.sh/cors@^2.8.5"
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
   }
 }
 </script>
