--- a/index.html
+++ b/index.html
@@ -35,12 +35,20 @@
 <script type="importmap">
 {
   "imports": {
-    "react-dom": "https://esm.sh/react-dom@^18.3.1",
-    "react-dom/client": "https://esm.sh/react-dom@^18.3.1/client",
-    "react": "https://esm.sh/react@^18.3.1",
-    "react-router-dom": "https://esm.sh/react-router-dom@^6.23.1",
-    "axios": "https://esm.sh/axios@^1.7.2",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "react": "https://esm.sh/react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.23.1",
+    "axios": "https://esm.sh/axios@1.7.2",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "mongoose": "https://esm.sh/mongoose@^9.1.2",
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "express": "https://esm.sh/express@^5.2.1",
+    "dotenv": "https://esm.sh/dotenv@^17.2.3",
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
+    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3"
   }
 }
 </script>
