--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       font-family: 'Inter', sans-serif;
       background-color: #0f172a;
       color: #f8fafc;
+      margin: 0;
+      overflow-x: hidden;
     }
     .font-mono {
       font-family: 'JetBrains Mono', monospace;
@@ -32,29 +34,70 @@
       background: #475569;
     }
   </style>
-<script type="importmap">
+  
+  <script>
+    // Robust environment shim for browser ESM
+    window.global = window;
+    if (!window.process) {
+      window.process = { 
+        env: { 
+          NODE_ENV: 'development'
+        } 
+      };
+    } else if (!window.process.env) {
+      window.process.env = { NODE_ENV: 'development' };
+    }
+    
+    // Catch-all for early module errors
+    window.addEventListener('error', (event) => {
+      if (event.message.includes('import')) {
+        console.error('Module load error detected:', event);
+        const root = document.getElementById('root');
+        if (root) {
+          root.innerHTML = `
+            <div style="padding: 2rem; color: #f87171; font-family: sans-serif; text-align: center;">
+              <h2 style="font-weight: 800;">Initialization Error</h2>
+              <p style="color: #94a3b8; margin-top: 1rem;">Failed to resolve application modules. Please check the console.</p>
+            </div>
+          `;
+        }
+      }
+    });
+  </script>
+
+  <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@18.3.1",
     "react/": "https://esm.sh/react@18.3.1/",
     "react-dom": "https://esm.sh/react-dom@18.3.1",
-    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-    "react-router-dom": "https://esm.sh/react-router-dom@6.23.1?external=react,react-dom",
-    "axios": "https://esm.sh/axios@1.7.2?external=react",
-    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?external=react,react-dom",
+    "axios": "https://esm.sh/axios@1.6.7",
+    "@google/genai": "https://esm.sh/@google/genai@0.21.0",
     "mongoose": "https://esm.sh/mongoose@^9.1.2",
     "express": "https://esm.sh/express@^5.2.1",
     "dotenv": "https://esm.sh/dotenv@^17.2.3",
     "cors": "https://esm.sh/cors@^2.8.5",
     "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <div style="height: 100vh; display: flex; align-items: center; justify-content: center; color: #6366f1; font-family: sans-serif; background: #0f172a;">
+      <div style="text-align: center;">
+        <div style="width: 48px; height: 48px; border: 3px solid #6366f120; border-top-color: #6366f1; border-radius: 50%; animation: spin 0.8s linear infinite; margin: 0 auto 24px;"></div>
+        <p style="font-weight: 700; letter-spacing: 0.1em; font-size: 0.75rem; color: #94a3b8; text-transform: uppercase;">Waking up the travel engine...</p>
+      </div>
+    </div>
+  </div>
+  <style>
+    @keyframes spin { to { transform: rotate(360deg); } }
+  </style>
   <script type="module" src="index.tsx"></script>
 </body>
 </html>
