--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,26 +37,32 @@
   <script>
     // Robust environment shim for browser ESM
     window.global = window;
-    if (!window.process) {
-      window.process = { 
-        env: { 
-          NODE_ENV: 'development'
-        } 
-      };
-    } else if (!window.process.env) {
-      window.process.env = { NODE_ENV: 'development' };
-    }
+    window.process = window.process || { env: { NODE_ENV: 'development' } };
+    if (!window.process.env) window.process.env = { NODE_ENV: 'development' };
     
-    // Catch-all for early module errors
+    // Catch-all for early module resolution errors
     window.addEventListener('error', (event) => {
-      if (event.message.includes('import')) {
+      const isModuleError = event.message && (
+        event.message.includes('import') || 
+        event.message.includes('Refused to execute') ||
+        event.message.includes('Failed to fetch dynamically imported module')
+      );
+      
+      if (isModuleError) {
         console.error('Module load error detected:', event);
         const root = document.getElementById('root');
         if (root) {
           root.innerHTML = `
-            <div style="padding: 2rem; color: #f87171; font-family: sans-serif; text-align: center;">
-              <h2 style="font-weight: 800;">Initialization Error</h2>
-              <p style="color: #94a3b8; margin-top: 1rem;">Failed to resolve application modules. Please check the console.</p>
+            <div style="padding: 3rem; color: #f87171; font-family: sans-serif; text-align: center; background: #0f172a; height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+              <div style="font-size: 3rem; margin-bottom: 1.5rem;">⚠️</div>
+              <h2 style="font-weight: 800; font-size: 1.8rem; margin-bottom: 1rem; color: #fff;">Application Boot Failed</h2>
+              <p style="color: #94a3b8; max-width: 500px; margin-bottom: 2rem; line-height: 1.6;">
+                The browser encountered a critical error while resolving application modules. 
+                This is typically caused by incompatible or unreachable dependencies in the import map.
+              </p>
+              <button onclick="location.reload()" style="background: #6366f1; color: white; padding: 0.8rem 2.5rem; border: none; border-radius: 1rem; font-weight: 700; cursor: pointer; transition: all 0.2s; box-shadow: 0 10px 15px -3px rgba(99, 102, 241, 0.3);">
+                Retry Initialization
+              </button>
             </div>
           `;
         }
@@ -75,13 +80,13 @@
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?external=react,react-dom",
     "axios": "https://esm.sh/axios@1.6.7",
     "@google/genai": "https://esm.sh/@google/genai@0.21.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "mongoose": "https://esm.sh/mongoose@^9.1.2",
     "express": "https://esm.sh/express@^5.2.1",
     "dotenv": "https://esm.sh/dotenv@^17.2.3",
     "cors": "https://esm.sh/cors@^2.8.5",
     "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
   }
 }
 </script>
@@ -91,7 +96,7 @@
     <div style="height: 100vh; display: flex; align-items: center; justify-content: center; color: #6366f1; font-family: sans-serif; background: #0f172a;">
       <div style="text-align: center;">
         <div style="width: 48px; height: 48px; border: 3px solid #6366f120; border-top-color: #6366f1; border-radius: 50%; animation: spin 0.8s linear infinite; margin: 0 auto 24px;"></div>
-        <p style="font-weight: 700; letter-spacing: 0.1em; font-size: 0.75rem; color: #94a3b8; text-transform: uppercase;">Waking up the travel engine...</p>
+        <p style="font-weight: 700; letter-spacing: 0.1em; font-size: 0.75rem; color: #94a3b8; text-transform: uppercase;">Waking up the Travel Engine...</p>
       </div>
     </div>
   </div>
